--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -12,16 +12,26 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 
-    <title>Webpage Not Found :(</title>
+    <title>An error has occured :(</title>
 </head>
 <body>
     <div class="container text-center mt-5">
     <img id="logo" src="/images/Logo Glass (Red).png" alt="This didn't load successfuly >:(" style="width: 140px">
-    <div><h1 style="font-weight: bold;:">404</h1> </div>
+    <div><h1 style="font-weight: bold;:">Error</h1> </div>
     </div>
     <div class="container text-center mt-3">
-    <span>We couldn't find the page you're looking for ☹️</span>
+    <span>An unknown error has occured ☹️</span>
+        <br><br>
+        <span style="font-weight: 600">What might've happened:</span>
+        <br>
         <div>
+            <div style="display: flex; justify-content: center">
+        <span>- You have been redirected to a page that doesn't exist.</span>
+            </div>
+            <div style="display: flex; justify-content: center">
+        <span>- You tried to access a page you don't have access to with your current privilages.</span>
+            </div>
+        </div>
         <button id="hb3" onclick="location.href = '/'" style="
                 margin-top: 20px;
                 padding: 10px 20px;
