--- a/src/main/resources/static/InternMapHomepage.css
+++ b/src/main/resources/static/InternMapHomepage.css
@@ -1,3 +1,17 @@
+* {
+    font-family: Inter, system-ui;
+}
+
+html {
+    height: 100%;
+}
+
+html body {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
 header {
 
     #h1 {
