--- a/src/main/resources/templates/Application.html
+++ b/src/main/resources/templates/Application.html
@@ -24,18 +24,19 @@
 </header>
 <body>
 
-
 <div th:if="${errorMessage}"
      style="color:red;border:1px solid red;padding:10px;margin-bottom:15px;">
     <p th:text="${errorMessage}"></p>
 </div>
 
-<div class="form-container">
-    <h2>Create Application</h2>
+<div>
+<h1 style="display: flex; justify-content: center">Create Application</h1>
+</div>
+<div class="form-container" style="display: flex; justify-content: center">
 
     <div th:if="${jobPosting != null}">
-        <h3>Applying for: <span th:text="${jobPosting.jobName}">Job Title</span></h3>
-        <p>Posted: <span th:text="${jobPosting.datePosted}">Date</span></p>
+        <h3 style="display: flex; justify-content: center">Applying for: <span th:text="${jobPosting.jobName}" style="justify-content: center">Job Title</span></h3>
+        <p style="display: flex; justify-content: center; padding-bottom: 30px">Posted: on <span th:text="${jobPosting.datePosted}">Date</span></p>
     </div>
 <form th:action="@{/application/save(jobId=${jobId})}"
       th:object="${applicationandCVDTO}"
