--- a/src/main/resources/templates/fragments/indexFooter.html
+++ b/src/main/resources/templates/fragments/indexFooter.html
@@ -4,27 +4,22 @@
     <meta charset="UTF-8">
     <title>InternMap - Login</title>
     <link rel="icon" type="image/png" th:href="@{/images/Logo Glass.png}">
-    <link rel="stylesheet" th:href="@{/InternMapSignUpchoice.css}">
+    <link rel="stylesheet" th:href="@{/InternMapHomepage.css}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<footer>
+<footer th:fragment="indexFooter">
     <div>
-        <!--    <img id="footer-image" src="/images/Footer image.png">-->
         <div id="footer">
-            <div id="ft1" class="can-we-stop-with-the-boxes-please">
-                InternMap
-            </div>
+            <div id="ft1" class="can-we-stop-with-the-boxes-please">InternMap</div>
             <div id="ft2">
                 <ul class="quick-links">
-                    <li>
-                        <a onclick="location.href = '/'" style="cursor: pointer">Home </a>
-                    </li>
-                    <li><a onclick="location.href = '/'" style="cursor: pointer">RoadMaps</a></li>
-                    <li><a onclick="location.href = '/JobPostings'" style="cursor: pointer" >JobPostings</a></li>
+                    <li><a onclick="location.href='/'" style="cursor:pointer">Home</a></li>
+                    <li><a onclick="location.href='/'" style="cursor:pointer">RoadMaps</a></li>
+                    <li><a onclick="location.href='/JobPostings'" style="cursor:pointer">JobPostings</a></li>
                 </ul>
             </div>
         </div>
