--- a/src/main/resources/templates/roadmap/form.html
+++ b/src/main/resources/templates/roadmap/form.html
@@ -298,7 +298,7 @@
                     <textarea name="modules[${moduleIndex}].skills[${skillCount}].description" required placeholder="Description"></textarea>
                 </div>
                 <div class="form-group">
-                    <input type="url" name="modules[${moduleIndex}].skills[${skillCount}].links[0]" required placeholder="Resource links (optional)">
+                    <input type="url" name="modules[${moduleIndex}].skills[${skillCount}].links[0]" placeholder="Resource links (optional)">
                 </div>
             </div>
         `;
