--- a/src/main/resources/static/InternMapSignIn.css
+++ b/src/main/resources/static/InternMapSignIn.css
@@ -749,6 +749,22 @@ body {
     line-height: 1.6;
 }
 
+@media (prefers-color-scheme: dark) {
+
+    body {
+        background-color: rgba(6, 6, 6, 0.96);
+        color: rgba(255, 255, 255, 0.95);
+    }
+
+    background-color: rgba(0, 0, 0, 0.96);
+    color: rgba(255, 255, 255, 0.95);
+}
+
+@media (prefers-color-scheme: light) {
+    /*background-color: #FBFBFB;*/
+    color: rgba(0, 0, 0, 0.80);
+}
+
 /* ===========================
    HEADER STYLES
    =========================== */
@@ -926,8 +942,15 @@ body {
     align-items: center;
 
     border-radius: 60px;
-    background: #FCFCFC;
-    box-shadow: 0 0 120px -6px rgba(0, 0, 0, 0.25);
+    /*background: #FCFCFC;*/
+    @media (prefers-color-scheme: light) {
+        box-shadow: 0 0 120px -6px rgba(0, 0, 0, 0.25);
+        background: rgba(237, 239, 241, 0.8);
+    }
+    @media (prefers-color-scheme: dark) {
+        box-shadow: 0 0 120px -6px rgba(32, 32, 32, 0.25);
+        background: rgba(43, 43, 43, 0.8);
+    }
 }
 
 /* Form Title */
@@ -937,7 +960,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 10px;
-    color: black;
+    /*color: black;*/
     font-size: 36px;
     font-weight: 700;
 }
@@ -966,7 +989,7 @@ body {
 .form-input,
 .form-textarea,
 .form-select {
-    color: rgba(0, 0, 0, 0.70);
+    /*color: rgba(0, 0, 0, 0.70); */
     font-family: Inter;
     font-size: 18px;
     font-weight: 500;
@@ -975,8 +998,12 @@ body {
     max-width: 750px;
     padding: 20px 20px;
     border-radius: 35px;
-    background: #FFF;
-    box-shadow: 0 1px 40px rgba(198, 198, 198, 0.10);
+    /*background: #FFF;*/
+    @media (prefers-color-scheme: dark) {
+        color: white;
+        background: rgba(66, 66, 66, 0.8);
+    }
+    /*box-shadow: 0 1px 40px rgba(198, 198, 198, 0.10);*/
     transition: all 0.3s ease;
     outline: none;
 }
@@ -985,12 +1012,12 @@ body {
 .form-textarea:focus,
 .form-select:focus {
     border-color: #2391FF;
-    color: rgba(0, 0, 0, 0.90);
+    /*color: rgba(0, 0, 0, 0.90);*/
 }
 
 .form-input::placeholder,
 .form-textarea::placeholder {
-    color: rgba(0, 0, 0, 0.40);
+    /*color: rgba(0, 0, 0, 0.40);*/
 }
 
 .form-textarea {
@@ -1030,7 +1057,7 @@ body {
 /* Form Link */
 .form-link {
     text-align: center;
-    color: rgba(0, 0, 0, 0.60);
+    /*color: rgba(0, 0, 0, 0.60);*/
     font-size: 16px;
     font-weight: 500;
 }
