--- a/src/main/resources/static/jobPosting.css
+++ b/src/main/resources/static/jobPosting.css
@@ -1,3 +1,36 @@
+* {
+    font-family: Inter, system-ui;
+    transition: all 0.25s ease-in-out;
+}
+
+html {
+    height: 100%;
+}
+
+html, body {
+    margin: 0;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+
+@media (prefers-color-scheme: dark) {
+
+    body {
+        background-color: rgba(0, 0, 0, 0.96);
+        color: rgba(255, 255, 255, 0.95);
+    }
+
+    background-color: rgba(0, 0, 0, 0.96);
+    color: rgba(255, 255, 255, 0.95);
+}
+
+@media (prefers-color-scheme: light) {
+
+    color: rgba(0, 0, 0, 0.80);
+}
+
 header {
 
     width: auto;
@@ -15,7 +48,7 @@ header {
         }
 
         #T1 {
-            color: #000;
+            /*color: #000;*/
             font-size: 40px;
             font-style: normal;
             font-weight: 700;
@@ -41,7 +74,9 @@ header {
             #hb1, #hb6 {
                 background: transparent;
                 border: transparent;
-                color: #000000;
+                @media (prefers-color-scheme: dark) {
+                    color: white;
+                }
             }
 
             #hb3, #hb4 {
@@ -50,7 +85,9 @@ header {
             }
 
             #person-fill {
-                filter: invert(100%);
+                @media (prefers-color-scheme: light) {
+                    filter: invert(100%);
+                }
             }
         }
     }
@@ -69,7 +106,7 @@ header {
         }
 
         #p1 {
-            color: #000;
+            /*color: #000;*/
             text-align: center;
             font-size: clamp(32px, 5vw , 64px);
             font-style: normal;
@@ -79,7 +116,7 @@ header {
         }
 
         #p2 {
-            color: #000;
+            /*color: #000;*/
             text-align: center;
             font-size: clamp(12px, 5vw , 24px);
             margin-left: 20px;
@@ -103,7 +140,7 @@ body {
         gap: 26px;
 
         #bh {
-            color: #000;
+            /*color: #000;*/
             font-size: clamp(32px, 5vw, 56px);
             font-style: normal;
             font-weight: 700;
@@ -117,12 +154,23 @@ body {
             padding: 9px;
             border-color: transparent;
             border-radius: 60px;
-            background: rgba(246, 246, 246, 0.8);
+            @media (prefers-color-scheme: light) {
+                background: rgba(237, 239, 241, 0.8);
+            }
+            @media (prefers-color-scheme: dark) {
+                background: rgba(43, 43, 43, 0.8);
+            }
 
             #bu1, #bu2 {
                 border-color: transparent;
                 background: transparent;
-                color: rgba(0, 0, 0, 0.80);
+                /*color: rgba(0, 0, 0, 0.80);*/
+                @media (prefers-color-scheme: dark) {
+                    color: white;
+                }
+                @media (prefers-color-scheme: light) {
+                    color: rgba(0, 0, 0, 0.80);
+                }
                 text-align: center;
                 font-size: 22px;
                 font-style: normal;
@@ -132,16 +180,31 @@ body {
             }
 
             #bu2 {
-                background: #ffffff;
+                @media (prefers-color-scheme: light) {
+                    background: #ffffff;
+                }
+                @media (prefers-color-scheme: dark) {
+                    background: rgba(96, 96, 96, 0.8);
+                }
                 border-radius: 34px;
                 cursor: initial;
-                color: rgba(0, 0, 0, 0.80);
+                /*color: rgba(0, 0, 0, 0.80);*/
+            }
+
+            #bu1:hover {
+                border-radius: 60px;
+                @media (prefers-color-scheme: dark) {
+                    background: rgba(57, 57, 57, 0.2);
+                }
+                @media (prefers-color-scheme: light) {
+                    background: rgba(133, 133, 133, 0.1);
+                }
             }
         }
     }
 
     #Title {
-        color: #000;
+        /*color: #000;*/
         font-size: 36px;
         font-style: normal;
         font-weight: 700;
@@ -152,7 +215,7 @@ body {
 
     #info {
         overflow: hidden;
-        color: rgba(0, 0, 0, 0.75);
+        /*color: rgba(0, 0, 0, 0.75);*/
         text-after-overflow: ellipsis;
         text-overflow: ellipsis;
         font-size: 13px;
@@ -163,7 +226,7 @@ body {
     }
 
     #details {
-        color: rgba(0, 0, 0, 0.75);
+        /*color: rgba(0, 0, 0, 0.75);*/
         font-size: 20px;
         font-style: normal;
         font-weight: 500;
@@ -171,10 +234,21 @@ body {
     }
 
     #separator {
-        border-bottom: 3px solid rgba(0, 0, 0, 0.1);
+        border-top: none;
+        border-left: none;
+        border-right: none;
+        border-bottom: none;
         border-radius: 20px;
         margin-top: 10px;
         margin-bottom: 10px;
+        width: 100%;
+        height: 3px;
+        @media (prefers-color-scheme: light) {
+            background: rgba(34, 34, 34, 0.1);
+        }
+        @media (prefers-color-scheme: dark) {
+            background: rgba(230, 230, 230, 0.1);
+        }
     }
 
     #apply-button {
@@ -214,7 +288,13 @@ body {
         display: flex;
         flex-direction: column;
         border-radius: 45px;
-        background: rgba(248, 248, 250, 0.8);
+        @media (prefers-color-scheme: light) {
+            background: rgba(237, 239, 241, 0.8);
+        }
+        @media (prefers-color-scheme: dark) {
+            color: white;
+            background: rgba(43, 43, 43, 0.8);
+        }
         width: 345px;
         /*height: 425px;*/
         padding: 20px 20px 15px;
@@ -222,9 +302,14 @@ body {
 }
 
 footer {
-    width: auto;
+    width: 100%;
     height: min-content;
-    background: linear-gradient(180deg, rgba(88, 171, 255, 0.60) 0%, #3397FC 100%);
+    @media (prefers-color-scheme: light) {
+        background: linear-gradient(180deg, rgba(88, 171, 255, 0.60) 0%, #3397FC 100%);
+    }
+    @media (prefers-color-scheme: dark) {
+        background: linear-gradient(180deg, rgba(52, 155, 255, 0.9), rgba(0, 134, 251, 0.8) 100%  100%);
+    }
 
     .quick-links {
         display: grid;
@@ -255,5 +340,9 @@ footer {
         font-weight: 700;
         padding-top: 20px;
         padding-bottom: 20px;
+    }
+
+    #ft2:hover {
+        translate: 2px;
     }
 }
