--- a/src/main/resources/templates/InternMapSignUpchoice.html
+++ b/src/main/resources/templates/InternMapSignUpchoice.html
@@ -32,11 +32,21 @@
             text-align: center;
             border: black solid 2px;
             border-radius: 50px;
-            color: black;
-            background-color: rgb(247, 247, 247);
+            /*color: black;*/
+            /*background-color: rgb(247, 247, 247);*/
+            @media (prefers-color-scheme: dark) {
+                background: rgba(43, 43, 43, 0.8);
+                color: white;
+            }
             font-family: Inter;
             font-size: 30px;
             font-weight: 600;
+        }
+
+        .image {
+            @media (prefers-color-scheme: dark) {
+                filter: invert(100%);
+            }
         }
 
         .flex-button:hover {
@@ -59,7 +69,7 @@
         <a th:href="@{/admin/register}" style="text-decoration: none; color: black;">
             <div class="flex-button">
                 <div class="vertical-container">
-                    <img src="/images/server_rack.png" height="60" width="77" alt="Server Rack" style="margin-top: 15px;"/>
+                    <img src="/images/server_rack.png" height="60" width="77" alt="Server Rack" style="margin-top: 15px;" class="image"/>
                     <abbr style="margin-top: 12px;">Admin</abbr>
                 </div>
             </div>
@@ -68,7 +78,7 @@
         <a th:href="@{/student/register}" style="text-decoration: none; color: black; z-index: 10">
             <div class="flex-button">
                 <div class="vertical-container">
-                    <img src="/images/Graduation_cap.png" height="81" width="76.87" alt="Graduation Cap"/>
+                    <img src="/images/Graduation_cap.png" height="81" width="76.87" alt="Graduation Cap" class="image"/>
                     Student
                 </div>
             </div>
@@ -77,7 +87,7 @@
         <a th:href="@{/recruiter/register}" style="text-decoration: none; color: black;">
             <div class="flex-button">
                 <div class="vertical-container">
-                    <img src="/images/Suitcase.png" height="63" width="75" alt="Suitcase" style="margin-top: 12px;"/>
+                    <img src="/images/Suitcase.png" height="63" width="75" alt="Suitcase" style="margin-top: 12px;" class="image"/>
                     Recruiter
                 </div>
             </div>
