--- a/src/main/resources/templates/roadmap/form.html
+++ b/src/main/resources/templates/roadmap/form.html
@@ -20,8 +20,31 @@
             box-sizing: border-box;
         }
 
+        @media (prefers-color-scheme: dark) {
+            color: rgba(255, 255, 255, 0.95);
+        }
+
+        @media (prefers-color-scheme: light) {
+            background: #FBFBFB;
+            color: rgba(0, 0, 0, 0.80);
+        }
+
+        .logo:hover {
+            transition: all 0.4s ease-in-out;
+            scale: 1.05;
+            rotate: 20deg;
+        }
+
         body {
-            background-color: #FBFBFB;
+            /*background-color: #FBFBFB;*/
+            @media (prefers-color-scheme: dark) {
+                background-color: rgba(0, 0, 0, 0.96);
+            }
+
+            @media (prefers-color-scheme: light) {
+                background: #FBFBFB;
+
+            }
             min-height: 100vh;
             padding: 2rem;
         }
@@ -29,26 +52,34 @@
         .container {
             max-width: 1000px;
             margin: 0 auto;
-            background: white;
+            @media (prefers-color-scheme: light) {
+                background: white;
+            }
+            @media (prefers-color-scheme: dark) {
+                background: rgba(43, 43, 43, 0.8);
+            }
             border-radius: 50px;
             padding: 2rem;
             box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
         }
 
         h1 {
-            color: #000000;
             margin-bottom: 2rem;
             text-align: center;
         }
 
         h3 {
-            color: #3e464a;
+            @media (prefers-color-scheme: light) {
+                color: #3e464a;
+            }
+            @media (prefers-color-scheme: dark) {
+                color: #efefef;
+            }
             font-weight: 550;
             margin-bottom: 1rem;
         }
 
         h4 {
-            color: #000000;
             font-size: 1rem;
             margin-bottom: 0.5rem;
         }
@@ -69,21 +100,33 @@
             width: 100%;
             padding: 0.7rem;
             border: none;
-            background: #f8f8f8;
-            border-radius: 20px;
+            @media (prefers-color-scheme: light) {
+                background: #f8f8f8;
+            }
+            @media (prefers-color-scheme: dark) {
+                background: #2e2e2e;
+            }
+            border-radius: 25px;
             font-size: 0.95rem;
         }
 
         input:focus,
         textarea:focus {
             outline: none;
-            color: #070707;
+            @media (prefers-color-scheme: light) {
+                color: #070707;
+            }
+            @media (prefers-color-scheme: dark) {
+                color: #ffffff;
+            }
         }
 
         textarea {
             min-height: 60px;
             border: none;
             resize: vertical;
+            transition: none;
+            transition-delay: 0s;
         }
 
         .module {
@@ -94,8 +137,14 @@
         }
 
         .skill {
-            background: rgba(239, 239, 239, 0.8);
-            box-shadow: 0 4px 28px rgba(0, 0, 0, 0.2);
+            @media (prefers-color-scheme: light) {
+                background: rgba(239, 239, 239, 0.8);
+                box-shadow: 0 4px 28px rgba(0, 0, 0, 0.2);
+            }
+            @media (prefers-color-scheme: dark) {
+                background: rgb(39, 39, 39);
+                box-shadow: 0 2px 15px rgba(11, 11, 11, 0.2);
+            }
             border-radius: 35px;
             padding: 1rem;
             margin-bottom: 1rem;
@@ -127,19 +176,32 @@
         }
 
         .btn-add {
-            background: #292929;
-            border-radius: 36px;
-            color: white;
-            margin-top: 0.5rem;
+            @media (prefers-color-scheme: light) {
+                color: rgba(255, 255, 255, 0.95);
+                background: #292929;
+            }
+            @media (prefers-color-scheme: dark) {
+                color: rgba(0, 0, 0, 0.80);
+                background: #ffffff;
+            }
+
+            /*border-radius: 36px;*/
+            /*margin-top: 0.5rem;*/
         }
 
         .btn-add:hover {
-            color: white;
-            background: #404040;
+            @media (prefers-color-scheme: light) {
+                color: white;
+                background: #292929;
+            }
+            @media (prefers-color-scheme: dark) {
+                color: rgba(44, 44, 44, 0.8);
+                background: #e1e1e1;
+            }
         }
 
         .btn-remove {
-            background: #e53e3e;
+            background: #ff3434;
             border-radius: 36px;
             color: white;
             font-size: 0.85rem;
@@ -147,7 +209,7 @@
         }
 
         .btn-remove:hover {
-            background: #f37575;
+            background: #f84c4c;
             color: white;
         }
 
@@ -173,6 +235,9 @@
     </style>
 </head>
 <body>
+<div style="display: flex; justify-content: center; margin-bottom: 6px">
+<img src="/images/compass.png" alt="Roadmap Logo" width="140" height="140" class="logo">
+</div>
 <h1>Create a new roadmap</h1>
 <div class="container">
 
@@ -221,11 +286,11 @@
                     </div>
                 </div>
 
-                <button type="button" class="btn btn-add" onclick="addSkill(0)" style="display: flex; justify-self: flex-end">+ Add Skill</button>
+                <button type="button" class="btn btn-add" onclick="addSkill(0)" style="display: flex; justify-self: flex-end">+ New Skill</button>
             </div>
         </div>
 
-        <button type="button" class="btn btn-add" onclick="addModule()" style="display: flex; justify-self: center; font-size: 18px">+ Another Module</button>
+        <button type="button" class="btn btn-add" onclick="addModule()" style="display: flex; justify-self: center; font-size: 18px">+ New Module</button>
 
         <div class="submit-section">
             <hr id="separator">
@@ -273,7 +338,7 @@
                     </div>
                 </div>
 
-                <button type="button" class="btn btn-add" onclick="addSkill(${moduleIndex})">+ Add Skill</button>
+                <button type="button" class="btn btn-add" onclick="addSkill(${moduleIndex})" style="display: flex; justify-self: flex-end">+ New Skill</button>
             </div>
         `;
 
