--- a/src/main/resources/templates/roadmap/view.html
+++ b/src/main/resources/templates/roadmap/view.html
@@ -49,6 +49,12 @@
             position: relative;
         }
 
+        .logo:hover {
+            transition: all 0.4s ease-in-out;
+            scale: 1.05;
+            rotate: 20deg;
+        }
+
         .btn-header {
             display: flex;
             border: none;
@@ -71,6 +77,11 @@
             color: #2391FF;
             font-weight: 550;
             margin-bottom: 10px;
+        }
+
+        .back-button:hover {
+            offset-position: left;
+            offset: 10px;
         }
 
         .module-header {
@@ -225,8 +236,8 @@
 <body>
 <div class="container">
     <div class="header">
-        <img src="/images/compass.png" alt="Roadmap Logo" width="140" height="140">
-        <h1 th:text="${roadmap.name}" style="font-weight: 700">Roadmap Name</h1>
+        <img src="/images/compass.png" alt="Roadmap Logo" width="140" height="140" class="logo">
+        <h1 th:text="${roadmap.name}" style="font-weight: 700; text-transform: capitalize;">Roadmap Name</h1>
     </div>
 
     <div class="back-button">
@@ -238,7 +249,7 @@
             <div class="module" th:each="module, iterStat : ${roadmap.allModules}">
                 <div class="module-header" th:onclick="'toggleModule(' + ${iterStat.index} + ')'">
                     <div class="module-info">
-                        <div class="module-title" th:text="${module.name}">Module Name</div>
+                        <div class="module-title" th:text="${module.name}" style="text-transform: capitalize">Module Name</div>
                         <div class="module-description" th:text="${module.description}">Module Description</div>
                     </div>
 <!--                    <div class="module-toggle"></div>-->
@@ -246,7 +257,7 @@
 
                 <div class="skills-grid" th:if="${module.allSkills != null and !module.allSkills.isEmpty()}">
                     <div class="skill-card" th:each="skill : ${module.allSkills}">
-                        <div class="skill-name" th:text="${skill.name}">Skill Name</div>
+                        <div class="skill-name" th:text="${skill.name}" style="text-transform: capitalize">Skill Name</div>
                         <div class="skill-description" th:text="${skill.description}">Skill Description</div>
 
                         <div class="resource-links" th:if="${skill.resourceLinks != null and !skill.resourceLinks.isEmpty()}">
